source/sass/global.scss
body {
  scroll-behavior: smooth;

  .noselect {
    -webkit-touch-callout: none; /* iOS */
    -webkit-user-select: none; /* Webkit */
    -moz-user-select: none; /* FF */
    -ms-user-select: none; /* IE/Edge */
    user-select: none;
  }
}

li {
  $list-item-vertical-margin: 0.25em;

  margin-bottom: $list-item-vertical-margin;

  ol,
  ul {
    margin-top: $list-item-vertical-margin;
  }
}

hr {
  border-color: $gray-20;

  &.intro-and-content-divider {
    @include intro-and-content-spacing(true);
  }
}

#hero {
  $bg-pattern-height: 144px;

  .banner {
    position: absolute;
    height: $bg-pattern-height;
    width: 100%;
    overflow: hidden;

    img {
      position: absolute;
      top: 0;
      left: 0;
      min-width: $bp-sm;

      @media screen and (min-width: $bp-sm) {
        min-width: 100%;
      }
    }
  }

  .cutout-wrapper-row {
    $offset-x-md: 24px;

    @media screen and (min-width: $bp-md) {
      margin-left: -$offset-x-md;
      margin-right: -$offset-x-md;
    }

    .cutout {
      margin-top: calc(#{$bg-pattern-height} - 40px);
      background: $white;

      @media screen and (min-width: $bp-md) {
        padding-left: $offset-x-md;
        padding-right: $offset-x-md;
      }
    }
  }

  @at-root #view-home & {
    $banner-min-height-mobile: 390px;
    $banner-min-height: 480px;

    min-height: $banner-min-height-mobile;

    @media screen and (min-width: $bp-md) {
      min-height: $banner-min-height;
    }

    .banner {
      min-height: $banner-min-height-mobile;
      height: auto;
      position: relative;
      display: flex;

      @media screen and (min-width: $bp-md) {
        min-height: $banner-min-height;
      }

      img {
        height: 100%;
        object-fit: cover;
        filter: brightness(55%);
      }

      .banner-content {
        align-self: end;
        margin-bottom: 72px;

        @media screen and (min-width: $bp-md) {
          margin-bottom: 128px;
        }

        h1 {
          font-weight: 700;
        }
      }
    }
  }
}

.ih-cta {
  border-bottom: 1px solid $black;
  border-top: 1px solid $black;
}

.donate-banner {
  background: $blue;
}

.site-footer {
  background: $black;

  &.dark-theme {
    // special override to make sure footer list links appear white (vs default dark theme anchor color $light-blue)
    .link-list a {
      @include dark-theme-inline-anchor($white);
    }
  }

  .link-list {
    li {
      &:not(:last-child) {
        margin-bottom: 0.5rem;
      }

      &:last-child {
        margin-bottom: 0;
      }
    }

    @media (min-width: $bp-lg) {
      column-count: 2;
      li {
        break-inside: avoid;
      }
    }
  }
}

.bg-gray {
  background: $gray-05;
}

